Changed the menu_screen.js so that when the menu screen is up the overflow is hidden. Also changed the position for the menu screen to fixed.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -32,7 +32,7 @@ body {
 /* Menu Screen */
 
 #menu-screen-div {
-    position: absolute;
+    position: fixed;
     display: none;
     align-content: center;
     background-color: coral;
